# advent-of-code

./: .gitignore  README.md  create-day.sh
2021/: README.md  create-day.sh  go.mod
2021/01/: day01.go  day01_test.go
2021/02/: day02.go  day02_test.go
2021/03/: day03.go  day03_test.go
2021/04/: day04.go  day04.txt  day04_test.go
2021/05/: day05.go  day05_test.go
2021/06/: day06.go  day06_test.go
2021/07/: day07.go  day07_test.go
2021/08/: day08.go  day08.txt  day08_test.go
2021/09/: day09.go  day09.txt  day09_test.go
2021/10/: day10.go  day10.txt  day10_test.go
2021/11/: day11.go  day11_test.go
2021/12/: day12.go  day12.txt  day12_test.go
2023/: .gitignore  README.md  create_day.sh
2023/00/: CMakeLists.txt  README.md  day00.cpp  day00.md  input.h  input.txt  inputs.h  main.cpp  makefile
2023/01/: README.md  inputs.h  main.cpp
2023/02/: README.md  inputs.h  main.cpp
2024/: .gitignore  README.md  create-day.sh  pyproject.toml
2024/01/: README.md  day01.py  test_day01.py
2024/02/: README.md  day02.py  test_day02.py
2024/03/: README.md  day03.py  test_day03.py
